<?xml version="1.0" encoding="utf-8"?>

<!-- Adapted from the following reference: https://www.youtube.com/watch?v=5VsRFJjyMjU&list=LL&index=6 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Adding items (each section of the app) to the nav drawer -->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_questionnaire"
            android:icon="@drawable/ic_baseline_question_answer_24"
                android:title="@string/menu_questionnaire" />
        <item
            android:id="@+id/nav_relief"
            android:icon="@drawable/ic_baseline_free_breakfast_24"
            android:title="@string/menu_relief" />
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_personal" />
        <item
            android:id="@+id/nav_learning"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_learning" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_baseline_phone_24"
            android:title="@string/menu_emergency" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/menu_account" />
    </group>
</menu>